--- a/templates/todo.html
+++ b/templates/todo.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <table class="table">
+    <todo-table class="todo-table">
         <thead>
             <tr>
                 <td><strong>Title</strong></td>
@@ -17,7 +17,7 @@
                 <button ng-click="deleteTodo(todo.id)"><span class="glyphicon glyphicon-trash"></span></button>
             </td>
         </tr>
-    </table>
+    </todo-table>
     <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#todo-modal">Create New Todo Item</button>
 
     <div class="modal fade" id="todo-modal" tabindex="-1" role="dialog" aria-labelledby="todo-form-modal" aria-hidden="true">
